web/fix: embedded pages container overflow

--- a/packages/web/styles/components/embedded-pages.module.scss
+++ b/packages/web/styles/components/embedded-pages.module.scss
@@ -1,6 +1,5 @@
 .card {
   border: 1px solid var(--mantine-color-neutral-3);
-  overflow-y: auto;
 }
 
 .item {
